Fix vertical margins of Tickets section
These were removed from the table when adding the heading (commit
6a5229ca3e1a6591990e5fcab67e3b2b46ff0168), but we still need them
"outside" the heading in the general case. This is not visible on
/registration-info at the moment, but that's only because the sections
above and below it still do have margins. The tickets section could
appear first or last in the document, however. In these cases margins
are needed to achieve the intended spacing between header/footer and
tickets section.

(The header/footer elements don't have margins themselves because we
don't have a guarantee that the design won't introduce some new
component that wants to be directly adjacent with no margins. Case in
point, the Hero component.)

--- a/web/components/TextBlock/Tickets/Tickets.module.css
+++ b/web/components/TextBlock/Tickets/Tickets.module.css
@@ -1,3 +1,7 @@
+.container {
+  margin: 80px 0;
+}
+
 .heading {
   margin: 0 0 32px;
 }
@@ -13,7 +17,6 @@
 .sections {
   font: var(--font-body-small-medium);
   letter-spacing: var(--letter-spacing-body-small);
-  margin: 48px 0;
 }
 
 .ticketInfo {
@@ -125,13 +128,13 @@
 }
 
 @media (--medium-up) {
+  .container {
+    margin: 96px 0;
+  }
+
   .heading {
     margin: 0 auto 48px;
     max-width: var(--max-body-text-width);
-  }
-
-  .sections {
-    margin: 64px 0;
   }
 
   .priceList {
@@ -151,6 +154,10 @@
 }
 
 @media (--large-up) {
+  .container {
+    margin: 128px 0;
+  }
+
   .heading {
     margin-bottom: 64px;
   }
